# report_check_cc

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  mock_api_server.py  pyproject.toml  test_config.json
config/: app.yaml  models.yaml
docs/: MSG_IMPLEMENTATION.md  MSG_SUPPORT.md
docs/superpowers/plans/: 2026-03-22-report-consistency-check.md  2026-03-23-pdf-report-checking-plan.md
docs/superpowers/specs/: 2026-03-22-report-consistency-check-design.md  2026-03-23-pdf-report-checking-design.md
examples/: README.md  create_test_pdf.py  pdf_check_rules.json  quality_check_rule.json  simple_rules.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
scripts/: test_msg_upload.py
src/report_check/: __init__.py  main.py
tests/: conftest.py  telecom_scanned_check_results.md  test_multimodal_checker.py  test_scanned_ocr.py
tests/fixtures/: README.md  README_MSG.md  create_test_msg.py  create_test_pdfs.py  sample_email_template.txt  telecom_scanned_check_rules.json  test_scanned_result.json
tests/test_api/: test_msg_api.py  test_router.py
tests/test_checkers/: SIGNATURE_INTEGRATION_TEST.md  test_api_check.py  test_external.py  test_image.py  test_semantic.py  test_signature_unit.py  test_text.py
tests/test_engine/: test_rule_engine.py  test_validator.py  test_variable_resolver.py
tests/test_models/: test_manager.py
tests/test_parser/: test_excel.py  test_msg.py  test_pdf.py  test_summarizer.py
tests/test_storage/: test_database.py
tests/test_worker/: test_worker.py
(+40 files in other folders)
