[project]
name = "report-check"
version = "0.1.0"
description = "AI-powered Excel report consistency checking system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "openpyxl>=3.1.0",
    "pillow>=10.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.20.0",
    "slowapi>=0.1.9",
    "pymupdf>=1.27.2.2",
    "pdfplumber>=0.11.0",
    "pandas",
    "matplotlib",
    "extract-msg>=0.48.0",
]

 [project.optional-dependencies]
signature = [
    "ultralytics>=8.4.30",
    "huggingface-hub>=1.8.0",
    "transformers>=5.4.0",
    "paddlepaddle>=3.3.1",
    "paddleocr>=3.4.0",
    "paddlex[ocr]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/report_check"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
